[package]
name = "smashnet"
version = "0.1.0"
authors = []
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
curl-sys = { git = "https://github.com/techyCoder81/curl-rust.git", branch = "main" }

[features]
dynamic = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
