[package]
name = "smashnet"
version = "0.1.0"
authors = []
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[features]
nro = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
